Presença turma A. Script Cecon Covid

--- a/Materias/2S2020/PED_CE342/Aulas/Panorama.org
+++ b/Materias/2S2020/PED_CE342/Aulas/Panorama.org
@@ -814,6 +814,17 @@ fig.savefig("./figs/Livres_Administrados_I.png", transparent = True, dpi = 300)
 
 *Principal mudança:* do incentivo à demanda agregada ao incetivo ao investimento privado.
 
+** Primeira fase (2011-2014)
+
+*Estado* na estratégia de crescimento econômico
+- Políticas macroeconômicas $\Rightarrow \Uparrow$ investimento privado
+- Reconhecimento da *indústria* como determinante do crescimento
+
+*** Mudança no contexto doméstico e internacional
+- *Doméstico:* Aceleração da inflação, expansão do crédito $\Rightarrow$ medidas macroprudenciais
+- *Internacional:* Cenário externo permissivo (miniciclo das /commodities/)
+
+
 ** Dificuldades em aberto cite:mello_2017_industrialismo
 
 - Limites do crescimento com expansão da demanda de consumo via crédito e políticas sociais
@@ -822,6 +833,24 @@ fig.savefig("./figs/Livres_Administrados_I.png", transparent = True, dpi = 300)
   - Crise mundial e investimento privado
 - Estrutura produtiva
     
+** Guinadas de política econômica
+
+*** Política fiscal
+Isenções fiscais $\Rightarrow$ incentivar investimento privado
+
+*** Política monetária
+
+Redução na taxa de juros $\Rightarrow \Downarrow$ juros de longo prazo
+
+*** Política cambial
+
+Intervenção no mercado de derivativos $\Rightarrow$ *Desvalorização* cambial $\Rightarrow \Uparrow$ Indústria
+
+*** Rupturas
+
+- Redução da arrecadação $\Rightarrow \Uparrow$ dívida/PIB
+- Câmbio valorizado $\Leftrightarrow$ Juros elevados $\nRightarrow$ Controle inflacionário
+
 ** Medidas macroprudenciais
 
 *Medidas macroprudenciais:* Redução do crescimento do crédito.
@@ -837,7 +866,17 @@ fig.savefig("./figs/Livres_Administrados_I.png", transparent = True, dpi = 300)
 - Elimina *boom* de consumo
 - Aumento da inadimplência
 
-  
+** Fatores internacionais, políticos e institucionais
+*** Internacionais $\Rightarrow$ deterioração do BP e da indústria
+
+- Crise do Euro
+- Redução do ritmo de crescimento da China
+- Fim do miniciclo de /commodities/ e câmbio desvalorizado
+*** Políticos  e institucionais $\Rightarrow$ Incerteza eleitoral
+- Manifestações de 2013
+- Avanço da Operação Lava Jato
+- Cutucando onças com varas curtas cite:singer_cutucando_2015
+
 ** Desaceleração rudimentar I
 
 #+CAPTION: Comparação das taxas de crescimento
@@ -859,6 +898,7 @@ fig.savefig("./figs/Livres_Administrados_I.png", transparent = True, dpi = 300)
 #+CAPTION: Política fiscal
 |-----------------------------------+-----------+-----------|
 |                                   | 2004-2010 | 2011-2014 |
+|-----------------------------------+-----------+-----------|
 | Superávit primário/PIB            | 3,2%      | 1,7%      |
 | Receitas do setor público         | 7,2%      | 1,2%      |
 | Transf. públicas para as famílias | 5,6%      | 4,9%      |
@@ -867,6 +907,14 @@ fig.savefig("./figs/Livres_Administrados_I.png", transparent = True, dpi = 300)
 |-----------------------------------+-----------+-----------|
 
 *Principal mudança:* do industrialismo à austeridade
+
+** Segunda fase (2015-?)
+Choques recessivos $\Rightarrow$ enfrentar os "desequilíbrios" da economia brasileira:
+
+- *Fiscal:* Cortes dos gastos do governo
+- *Cambial:* Desvalorização acentuada (50%)
+- *Preços administrados:* realinhamento (choque) das tarifas de eletricidade e combustível
+- *Monetário:* Elevação da taxa de juros (14,25%)
 
 ** [[https://www.causaoperaria.org.br/brasil-o-golpe-a-opera-do-fim-do-mundo-artista-retrata-o-golpe-de-estado-no-pais/][Prêambulo para a ópera do fim do mundo]]
 
@@ -880,8 +928,51 @@ fig.savefig("./figs/Livres_Administrados_I.png", transparent = True, dpi = 300)
 #+end_export
 
 * Governos (?) Temer e Início Bolsonaro
+** Continuidades: Reformas
+
+Desde o Governo Temer (2016-2019) até o Governo Bolsonaro (2019-) houve uma mudança profunda na condução da política econômica:
+- Políticas ortodoxas
+- Reformas liberalizantes
+  + *Trabalhista (2016):* Flexibilização no mercado de trabalho
+  + *Previdência (2019):* Justificativa de reduzir o déficit da previdência
+  + *Tributária (?):* A caminho
+  + *Privatizações:* Já iniciadas pelas subsidiárias e avançando
+  + *Abertura comercial:* $\Downarrow$ Tarifas alfandegária $\Rightarrow \Uparrow$ competitividade via mercado
+
+** Continuidades: Políticas macroeconômicas
+
+*** Política fiscal
+- Implementação do teto de gastos $\Rightarrow$ contracionista $\Leftrightarrow$ contração fiscal expansionista
+- Liberalização de recursos (FGTS e PIS/PASEP) $\Rightarrow$ estimular demanda agregada
+*** Política monetária
+- Política monetária conservadora $\Rightarrow$ ancorar expectativas inflacionárias
+*** Política cambial
+Mais flexível $\Rightarrow$ conversibilidade do real
 
 * Corona-crise
+
+** Crise sanitária $\Rightarrow$ crise econômica? [[https://www.economia.unicamp.br/covid19/o-impacto-economico-da-pandemia-do-covid-19-e-a-contracao-do-pib-no-primeiro-trimestre-de-2020-nao-e-culpa-da-politica-de-saude-publica][Nota Cecon Nº14]]
+
+- A contração do PIB tem forte relação com a pandemia do Covid-19, mas não com as políticas de saúde pública
+- Tendência de desaceleração do IBC-Br desde o último trimestre de 2019.
+  + Contágio econômico: Desaceleração $\Rightarrow$ contração
+- Desaceleração econômica é relativamente mais rápida que a difusão da pandemia e anterior à implementação das primeiras políticas de isolamento social.
+
+*** Resumo
+É a *pandemia* que deprime a economia, e não as políticas de saúde pública capazes de controlá-la.
+
+Crise econômica $\Leftrightarrow$ Pandemia
+
+Crise econômcia $\nLeftrightarrow$ Isolamento social $\Rightarrow \Downarrow$ Pandemia
+
+** Políticas econômicas
+
+*** Medidas de proteção da renda
+
+- Auxílio emergencial (R$600,00 $\approx$ US$ 120,00)
+- Liberação de liquidez no sistema financeiro internacional
+- Atenuação de requerimento de capital
+- Políticas de crédito para o setor empresarial
 * Dados 2011-2020
 
 
@@ -1212,57 +1303,75 @@ fig.savefig("./figs/IPCA.png", transparent = True, dpi = 300)
 
 #+BEGIN_SRC python
 df = consulta_bc(13521, ["Meta"])
-df = df.resample('MS').ffill()#.bfill()
+df = df.resample("MS").ffill()  # .bfill()
 
 df["Teto"] = df["Meta"] + 2.0
 df["Piso"] = df["Meta"] - 2.0
 
-df = pd.concat([
-    df,
-    consulta_bc(433,["IPCA"]),
-    consulta_bc(11428,["Livres"]),
-    consulta_bc(4449,["Monitorados"]),
-    consulta_bc(10844,["Serviços"]),
-], axis=1)
+df = pd.concat(
+    [
+        df,
+        consulta_bc(433, ["IPCA"]),
+        consulta_bc(11428, ["Livres"]),
+        consulta_bc(4449, ["Monitorados"]),
+        consulta_bc(10844, ["Serviços"]),
+    ],
+    axis=1,
+)
 
 df = df["2009-12-31":]
-df = df/100
-df["IPCA"] = (1+ df["IPCA"]).rolling(window=12).agg(lambda x : x.prod()) -1
-df["Livres"] = (1+ df["Livres"]).rolling(window=12).agg(lambda x : x.prod()) -1
-df["Monitorados"] = (1+ df["Monitorados"]).rolling(window=12).agg(lambda x : x.prod()) -1
-df["Serviços"] = (1+ df["Serviços"]).rolling(window=12).agg(lambda x : x.prod()) -1
-fig, ax = plt.subplots(figsize=(19.20,10.80))
+df = df / 100
+df["IPCA"] = (1 + df["IPCA"]).rolling(window=12).agg(lambda x: x.prod()) - 1
+df["Livres"] = (1 + df["Livres"]).rolling(window=12).agg(lambda x: x.prod()) - 1
+df["Monitorados"] = (1 + df["Monitorados"]).rolling(window=12).agg(
+    lambda x: x.prod()
+) - 1
+df["Serviços"] = (1 + df["Serviços"]).rolling(window=12).agg(lambda x: x.prod()) - 1
+fig, ax = plt.subplots(figsize=(19.20, 10.80))
 
-df[["Livres", "Monitorados", "Serviços", "IPCA"]].dropna().plot(ax=ax,
-lw=2,
-ls='-',
-color = ('blue','red','green', 'black'),                  
+df[["Livres", "Monitorados", "Serviços", "IPCA"]].dropna().plot(
+    ax=ax,
+    lw=2,
+    ls="-",
+    color=("blue", "red", "green", "black"),
 )
 
 ax.text(
-0.95, -0.15,
-f'\nAtualizado em {datetime.datetime.now():%Y-%m-%d %H:%M}',
-verticalalignment='bottom', horizontalalignment='right',
-transform=ax.transAxes,
-color='black', fontsize=10)
-
-ax.pcolorfast(ax.get_xlim(), ax.get_ylim(),
-              (df['IPCA'] > df["Teto"]).values[np.newaxis],
-              cmap='Blues', alpha=0.3, label="Acima do Teto",
-              zorder=-1,
+    0.95,
+    -0.15,
+    f"\nAtualizado em {datetime.datetime.now():%Y-%m-%d %H:%M}",
+    verticalalignment="bottom",
+    horizontalalignment="right",
+    transform=ax.transAxes,
+    color="black",
+    fontsize=10,
 )
 
-ax.pcolorfast(ax.get_xlim(), ax.get_ylim(),
-              (df['IPCA'] < df["Piso"]).values[np.newaxis],
-              cmap='Reds', alpha=0.3, label="Abaixo do Piso",
-              zorder=-1,
+ax.pcolorfast(
+    ax.get_xlim(),
+    ax.get_ylim(),
+    (df["IPCA"] > df["Teto"]).values[np.newaxis],
+    cmap="Reds",
+    alpha=0.3,
+    label="Acima do Teto",
+    zorder=-1,
+)
+
+ax.pcolorfast(
+    ax.get_xlim(),
+    ax.get_ylim(),
+    (df["IPCA"] < df["Piso"]).values[np.newaxis],
+    cmap="Blues",
+    alpha=0.3,
+    label="Abaixo do Piso",
+    zorder=-1,
 )
 
 ax.legend()
 
 sns.despine()
 
-fig.savefig("./figs/Livres_Administrados.png", transparent = True, dpi = 300)
+fig.savefig("./figs/Livres_Administrados.png", transparent=True, dpi=300)
 plt.cla()
 #+END_SRC
 
@@ -1276,14 +1385,32 @@ plt.cla()
 \begin{figure}[htb]
 \centering
 \caption{IPCA e seus componentes: preços livres, monitorados e serviços} 
-\includegraphics[width = 0.65\textwidth]{./figs/Livres_Administrados.png}
+\includegraphics[width = 0.95\textwidth]{./figs/Livres_Administrados.png}
 \label{fig:livres_adm}
 \caption*{\textbf{Fonte:} BCB}
 \end{figure}
 #+end_export
 
+** Consumo de energia não-residencial (dados diários)
+#+begin_export latex
+\begin{figure}[htb]
+\centering
+\includegraphics[width = 0.95\textwidth]{./figs/Energia.png}
+\label{fig:cycles}
+\caption*{\textbf{Fonte:} \textcite{bastos_2020_impacto}}
+\end{figure}
+#+end_export
 
+** Indicadores de antecedentes: IBC-Br 
 
+#+begin_export latex
+\begin{figure}[htb]
+\centering
+\includegraphics[width = 0.95\textwidth]{./figs/IBCBr_corona.png}
+\label{fig:cycles}
+\caption*{\textbf{Fonte:} \textcite{bastos_2020_impacto}}
+\end{figure}
+#+end_export
 * Referências
 
 ** Referências
