--- a/Materias/2S2020/PED_CE342/Aulas/Panorama.tex
+++ b/Materias/2S2020/PED_CE342/Aulas/Panorama.tex
@@ -1,4 +1,4 @@
-% Created 2020-12-10 qui 11:32
+% Created 2020-12-14 seg 18:00
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation]{beamer}
   \usepackage{csquotes, caption}
@@ -19,9 +19,9 @@
 \end{frame}
 
 \section{Introdução}
-\label{sec:org4c0dcb5}
+\label{sec:org80161f6}
 
-\begin{frame}[label={sec:orgfc2e8c2}]{Estrutura das aulas}
+\begin{frame}[label={sec:org54e2f06}]{Estrutura das aulas}
 A aula terá a seguinte estrutura
 \begin{itemize}
 \item \alert{Teórico:} Conjuntura pré-Regime de Metas e revisão teórica
@@ -40,9 +40,9 @@ A aula terá a seguinte estrutura
 
 
 \section{Preâmbulo: Cenário internacional adverso, Implementação do RMI e a herança maldita}
-\label{sec:orgd5908fa}
+\label{sec:org8467b32}
 
-\begin{frame}[label={sec:org0da0e70}]{A Herança Maldita \cite{belluzzoDepoisQuedaEconomia2002}}
+\begin{frame}[label={sec:orgd694309}]{A Herança Maldita \cite{belluzzoDepoisQuedaEconomia2002}}
 \begin{itemize}
 \item Desmonte ossatura Estado Desenvolvimentista
 \item Crise Russa, Mexicana, Argentina \(\Rightarrow\) \emph{flight to quality}
@@ -64,9 +64,9 @@ A aula terá a seguinte estrutura
 \end{frame}
 
 \section{RMI: Esquema analítico}
-\label{sec:org2924f96}
+\label{sec:org1731fb2}
 
-\begin{frame}[label={sec:org4404082}]{Diagrama}
+\begin{frame}[label={sec:org46351e0}]{Diagrama}
 \begin{figure}[htb]
 \centering
 \caption{Representação do Modelo do regime de Metas para inflação} 
@@ -75,7 +75,7 @@ A aula terá a seguinte estrutura
 \caption*{\textbf{Fonte:} Elaboração própria}
 \end{figure}
 \end{frame}
-\begin{frame}[label={sec:orgebcd18c}]{Estrutura das Atas do Copom}
+\begin{frame}[label={sec:orgd37f975}]{Estrutura das Atas do Copom}
 \begin{itemize}
 \item Evolução recente da economia \(\Rightarrow\) \(h_{t-m}, h_{t}, (\pi_{t} - \pi^{\star}), \varepsilon^{D}, \varepsilon^{S}\)
 \item Avaliação prospectiva das tendências de inflação \(\Rightarrow\) \(\pi^{e}\)
@@ -98,7 +98,7 @@ A aula terá a seguinte estrutura
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org5b2b979}]{Exemplo: \href{https://www.bcb.gov.br/publicacoes/atascopom/28102020}{Ata Nº234}}
+\begin{frame}[label={sec:org3ae8d63}]{Exemplo: \href{https://www.bcb.gov.br/publicacoes/atascopom/28102020}{Ata Nº234}}
 \begin{itemize}
 \item \alert{Setor externo:} \(\Downarrow\) retomada de alguns setores (\(\varepsilon^{F}\))
 \item Moderação da volatilidade dos ativos financeiros \(\Rightarrow\) favorece economias emergentes
@@ -124,7 +124,7 @@ A aula terá a seguinte estrutura
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org4f66ff9}]{Exemplo: \href{https://www.bcb.gov.br/publicacoes/atascopom/28102020}{Ata Nº234 03/Nov/2020}}
+\begin{frame}[label={sec:orgec93b95}]{Exemplo: \href{https://www.bcb.gov.br/publicacoes/atascopom/28102020}{Ata Nº234 03/Nov/2020}}
 \begin{figure}[htb]
 \centering
 \caption{Representação de Análise de uma ata do COPOM}
@@ -134,9 +134,9 @@ A aula terá a seguinte estrutura
 \end{figure}
 \end{frame}
 \section{Governos Lula e suas fases}
-\label{sec:org723fde5}
+\label{sec:org909d258}
 
-\begin{frame}[label={sec:orgb5d1cc2}]{Crescimento e desequilíbrios globais \cite{carneiroSupremaciaDosMercados2006}}
+\begin{frame}[label={sec:orgc04ef81}]{Crescimento e desequilíbrios globais \cite{carneiroSupremaciaDosMercados2006}}
 Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâmico e desequiblibrado entre 2002/3 a 2007/8
 
 \alert{Engrenagem comercial com 3 elos}
@@ -153,7 +153,7 @@ Após fase conturbada de 1997/2002, a economia global consolida um arrajno dinâ
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgbae79f2}]{Primeira Fase (2002-2006)}
+\begin{frame}[label={sec:orga11276d}]{Primeira Fase (2002-2006)}
 Experimento desenvolvimentista junto de uma política macroeconômica conservadora:
 \begin{itemize}
 \item Continuidade do tripé
@@ -171,7 +171,7 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 \alert{Contexto de transição complexa:} desconfiança dos credores e pressões financeiras
 \end{frame}
 
-\begin{frame}[label={sec:org22d2d64}]{Segunda fase (2006-2010)}
+\begin{frame}[label={sec:orge730534}]{Segunda fase (2006-2010)}
 \begin{itemize}
 \item Retomada do Estado como elemento condutor do Crescimento
 \item Desenho da política fiscal no centro de proposta do desenvolvimento
@@ -181,7 +181,7 @@ Experimento desenvolvimentista junto de uma política macroeconômica conservado
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgaae0075}]{Continuidades}
+\begin{frame}[label={sec:org133531b}]{Continuidades}
 \begin{block}{Política cambial}
 Pouco mudou ao longo do tempo
 
@@ -212,7 +212,7 @@ Não foi alterado o regime fiscal definido na era FHC
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org6ae8369}]{Descontinuidades}
+\begin{frame}[label={sec:org9306c02}]{Descontinuidades}
 Conjugação de políticas de incentivo à renda e ao mercado interno
 
 \begin{itemize}
@@ -231,7 +231,7 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org95be0b5}]{Alguns resultados}
+\begin{frame}[label={sec:orgfe059b6}]{Alguns resultados}
 \begin{itemize}
 \item Queda da taxa de desemprego aberta
 \item Valorização real do salário mínimo
@@ -241,7 +241,7 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org40bec68}]{Fatores determinantes}
+\begin{frame}[label={sec:org083bb91}]{Fatores determinantes}
 \begin{itemize}
 \item Impulsos externos favoráveis
 \begin{itemize}
@@ -263,9 +263,9 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{frame}
 
 \section{Dados 2002-2011}
-\label{sec:org5a245ef}
+\label{sec:org01f38a5}
 
-\begin{frame}[label={sec:org139b3e0}]{PIB puxado pelo mercado doméstico}
+\begin{frame}[label={sec:org19b0086}]{PIB puxado pelo mercado doméstico}
 \begin{figure}[htb]
 \centering
 \caption{Decomp. tx de crescimento do produto - Domésticos e externos} 
@@ -276,7 +276,7 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 \end{frame}
 
 
-\begin{frame}[label={sec:org7d9d2c0}]{Crescimento e o investimento induzido}
+\begin{frame}[label={sec:org63eee7a}]{Crescimento e o investimento induzido}
 \begin{figure}[htb]
 \centering
 \caption{Taxa de crescimento do produto - decomposição total} 
@@ -289,7 +289,7 @@ Conjugação de políticas de incentivo à renda e ao mercado interno
 
 
 
-\begin{frame}[label={sec:org216fd66}]{Investimento público em recuperação \cite{orair_investimento_2016}}
+\begin{frame}[label={sec:orgae58a3b}]{Investimento público em recuperação \cite{orair_investimento_2016}}
 \begin{table}[htbp]
 \caption{Taxa de crescimento do investimentos públicos (1994-2015)}
 \centering
@@ -310,7 +310,7 @@ Ano & Gov. Central & Gov. Geral & Setor Público & PIB\\
 
 
 
-\begin{frame}[label={sec:org1dfbc6d}]{Emprego}
+\begin{frame}[label={sec:orgb083449}]{Emprego}
 \begin{figure}[htb]
 \centering
 \caption{Índice do Emprego Formal} 
@@ -321,7 +321,7 @@ Ano & Gov. Central & Gov. Geral & Setor Público & PIB\\
 \end{frame}
 
 
-\begin{frame}[label={sec:orgc26c9de}]{Taxa de câmbio nominal}
+\begin{frame}[label={sec:orgc4b353c}]{Taxa de câmbio nominal}
 \begin{figure}[htb]
 \centering
 \caption{ Índice da taxa de câmbio efetiva nominal\\Jun/1994=100 } 
@@ -332,7 +332,7 @@ Ano & Gov. Central & Gov. Geral & Setor Público & PIB\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org9f43a71}]{Taxa de juros selic}
+\begin{frame}[label={sec:org1c7fa67}]{Taxa de juros selic}
 \begin{figure}[htb]
 \centering
 \caption{Taxa de juros selic a.a. (efetivo x meta)\\Anualizada base 252} 
@@ -343,7 +343,7 @@ Ano & Gov. Central & Gov. Geral & Setor Público & PIB\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org8fbff3b}]{Finalmente, inflação (ops, IPCA)}
+\begin{frame}[label={sec:org5b20894}]{Finalmente, inflação (ops, IPCA)}
 \begin{figure}[htb]
 \centering
 \caption{IPCA e Metas para Inflação} 
@@ -352,7 +352,7 @@ Ano & Gov. Central & Gov. Geral & Setor Público & PIB\\
 \caption*{\textbf{Fonte:} BCB}
 \end{figure}
 \end{frame}
-\begin{frame}[label={sec:org4fa355b}]{Composição do IPCA \cite{bcb_2019_Atualizacoes}}
+\begin{frame}[label={sec:orge1e97ec}]{Composição do IPCA \cite{bcb_2019_Atualizacoes}}
 \begin{table}[htbp]
 \caption{IPCA: estruturas de ponderação – janeiro de 2018}
 \centering
@@ -373,7 +373,7 @@ Comunicação & 3.65 & 6.19 & 2.54\\
 \end{tabular}
 \end{table}
 \end{frame}
-\begin{frame}[label={sec:orgb838dce}]{Preços livres, monitorados, serviços}
+\begin{frame}[label={sec:org592814f}]{Preços livres, monitorados, serviços}
 \begin{figure}[htb]
 \centering
 \caption{IPCA e seus componentes: preços livres, monitorados e serviços} 
@@ -385,9 +385,9 @@ Comunicação & 3.65 & 6.19 & 2.54\\
 
 
 \section{Governo(s?) Dilma}
-\label{sec:org5740b90}
+\label{sec:org63be10d}
 
-\begin{frame}[label={sec:org3f33fb7}]{Os três motores \cite{serrano_demanda_2015}}
+\begin{frame}[label={sec:org504d2c9}]{Os três motores \cite{serrano_demanda_2015}}
 \begin{figure}[htb]
 \centering
 \caption{Os três motores do crescimento} 
@@ -399,7 +399,23 @@ Comunicação & 3.65 & 6.19 & 2.54\\
 \alert{Principal mudança:} do incentivo à demanda agregada ao incetivo ao investimento privado.
 \end{frame}
 
-\begin{frame}[label={sec:orgbea04b6}]{Dificuldades em aberto \cite{mello_2017_industrialismo}}
+\begin{frame}[label={sec:org687622e}]{Primeira fase (2011-2014)}
+\alert{Estado} na estratégia de crescimento econômico
+\begin{itemize}
+\item Políticas macroeconômicas \(\Rightarrow \Uparrow\) investimento privado
+\item Reconhecimento da \alert{indústria} como determinante do crescimento
+\end{itemize}
+
+\begin{block}{Mudança no contexto doméstico e internacional}
+\begin{itemize}
+\item \alert{Doméstico:} Aceleração da inflação, expansão do crédito \(\Rightarrow\) medidas macroprudenciais
+\item \alert{Internacional:} Cenário externo permissivo (miniciclo das \emph{commodities})
+\end{itemize}
+\end{block}
+\end{frame}
+
+
+\begin{frame}[label={sec:orgbd2455e}]{Dificuldades em aberto \cite{mello_2017_industrialismo}}
 \begin{itemize}
 \item Limites do crescimento com expansão da demanda de consumo via crédito e políticas sociais
 \item Retomada da taxa de investimento, mas nível baixo
@@ -411,7 +427,28 @@ Comunicação & 3.65 & 6.19 & 2.54\\
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orga2cc513}]{Medidas macroprudenciais}
+\begin{frame}[label={sec:org689bd99}]{Guinadas de política econômica}
+\begin{block}{Política fiscal}
+Isenções fiscais \(\Rightarrow\) incentivar investimento privado
+\end{block}
+
+\begin{block}{Política monetária}
+Redução na taxa de juros \(\Rightarrow \Downarrow\) juros de longo prazo
+\end{block}
+
+\begin{block}{Política cambial}
+Intervenção no mercado de derivativos \(\Rightarrow\) \alert{Desvalorização} cambial \(\Rightarrow \Uparrow\) Indústria
+\end{block}
+
+\begin{block}{Rupturas}
+\begin{itemize}
+\item Redução da arrecadação \(\Rightarrow \Uparrow\) dívida/PIB
+\item Câmbio valorizado \(\Leftrightarrow\) Juros elevados \(\nRightarrow\) Controle inflacionário
+\end{itemize}
+\end{block}
+\end{frame}
+
+\begin{frame}[label={sec:org3912a52}]{Medidas macroprudenciais}
 \alert{Medidas macroprudenciais:} Redução do crescimento do crédito.
 
 \begin{itemize}
@@ -431,8 +468,24 @@ Comunicação & 3.65 & 6.19 & 2.54\\
 \end{block}
 \end{frame}
 
+\begin{frame}[label={sec:org4cc5260}]{Fatores internacionais, políticos e institucionais}
+\begin{block}{Internacionais \(\Rightarrow\) deterioração do BP e da indústria}
+\begin{itemize}
+\item Crise do Euro
+\item Redução do ritmo de crescimento da China
+\item Fim do miniciclo de \emph{commodities} e câmbio desvalorizado
+\end{itemize}
+\end{block}
+\begin{block}{Políticos  e institucionais \(\Rightarrow\) Incerteza eleitoral}
+\begin{itemize}
+\item Manifestações de 2013
+\item Avanço da Operação Lava Jato
+\item Cutucando onças com varas curtas \cite{singer_cutucando_2015}
+\end{itemize}
+\end{block}
+\end{frame}
 
-\begin{frame}[label={sec:orgd18a5eb}]{Desaceleração rudimentar I}
+\begin{frame}[label={sec:orgf33f8f1}]{Desaceleração rudimentar I}
 \begin{table}[htbp]
 \caption{Comparação das taxas de crescimento}
 \centering
@@ -453,13 +506,14 @@ Renda disp. (Famílias) & 5,3\% & 1,2\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org1162fb6}]{Desaceleração rudimentar II}
+\begin{frame}[label={sec:org8ef045c}]{Desaceleração rudimentar II}
 \begin{table}[htbp]
 \caption{Política fiscal}
 \centering
 \begin{tabular}{lll}
 \hline
  & 2004-2010 & 2011-2014\\
+\hline
 Superávit primário/PIB & 3,2\% & 1,7\%\\
 Receitas do setor público & 7,2\% & 1,2\%\\
 Transf. públicas para as famílias & 5,6\% & 4,9\%\\
@@ -472,7 +526,18 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \alert{Principal mudança:} do industrialismo à austeridade
 \end{frame}
 
-\begin{frame}[label={sec:orga5f6e3c}]{\href{https://www.causaoperaria.org.br/brasil-o-golpe-a-opera-do-fim-do-mundo-artista-retrata-o-golpe-de-estado-no-pais/}{Prêambulo para a ópera do fim do mundo}}
+\begin{frame}[label={sec:org599ca6c}]{Segunda fase (2015-?)}
+Choques recessivos \(\Rightarrow\) enfrentar os "desequilíbrios" da economia brasileira:
+
+\begin{itemize}
+\item \alert{Fiscal:} Cortes dos gastos do governo
+\item \alert{Cambial:} Desvalorização acentuada (50\%)
+\item \alert{Preços administrados:} realinhamento (choque) das tarifas de eletricidade e combustível
+\item \alert{Monetário:} Elevação da taxa de juros (14,25\%)
+\end{itemize}
+\end{frame}
+
+\begin{frame}[label={sec:org8366b0b}]{\href{https://www.causaoperaria.org.br/brasil-o-golpe-a-opera-do-fim-do-mundo-artista-retrata-o-golpe-de-estado-no-pais/}{Prêambulo para a ópera do fim do mundo}}
 \begin{figure}[htb]
 \centering
 \caption{Brasil, O Golpe: A Ópera do fim do mundo} 
@@ -482,16 +547,77 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 \section{Governos (?) Temer e Início Bolsonaro}
-\label{sec:org86080dc}
+\label{sec:org8da5895}
+\begin{frame}[label={sec:orge530860}]{Continuidades: Reformas}
+Desde o Governo Temer (2016-2019) até o Governo Bolsonaro (2019-) houve uma mudança profunda na condução da política econômica:
+\begin{itemize}
+\item Políticas ortodoxas
+\item Reformas liberalizantes
+\begin{itemize}
+\item \alert{Trabalhista (2016):} Flexibilização no mercado de trabalho
+\item \alert{Previdência (2019):} Justificativa de reduzir o déficit da previdência
+\item \alert{Tributária (?):} A caminho
+\item \alert{Privatizações:} Já iniciadas pelas subsidiárias e avançando
+\item \alert{Abertura comercial:} \(\Downarrow\) Tarifas alfandegária \(\Rightarrow \Uparrow\) competitividade via mercado
+\end{itemize}
+\end{itemize}
+\end{frame}
+
+\begin{frame}[label={sec:org8b2bc2d}]{Continuidades: Políticas macroeconômicas}
+\begin{block}{Política fiscal}
+\begin{itemize}
+\item Implementação do teto de gastos \(\Rightarrow\) contracionista \(\Leftrightarrow\) contração fiscal expansionista
+\item Liberalização de recursos (FGTS e PIS/PASEP) \(\Rightarrow\) estimular demanda agregada
+\end{itemize}
+\end{block}
+\begin{block}{Política monetária}
+\begin{itemize}
+\item Política monetária conservadora \(\Rightarrow\) ancorar expectativas inflacionárias
+\end{itemize}
+\end{block}
+\begin{block}{Política cambial}
+Mais flexível \(\Rightarrow\) conversibilidade do real
+\end{block}
+\end{frame}
 
 \section{Corona-crise}
-\label{sec:orged45315}
+\label{sec:org82716c3}
+
+\begin{frame}[label={sec:org0797522}]{Crise sanitária \(\Rightarrow\) crise econômica? \href{https://www.economia.unicamp.br/covid19/o-impacto-economico-da-pandemia-do-covid-19-e-a-contracao-do-pib-no-primeiro-trimestre-de-2020-nao-e-culpa-da-politica-de-saude-publica}{Nota Cecon Nº14}}
+\begin{itemize}
+\item A contração do PIB tem forte relação com a pandemia do Covid-19, mas não com as políticas de saúde pública
+\item Tendência de desaceleração do IBC-Br desde o último trimestre de 2019.
+\begin{itemize}
+\item Contágio econômico: Desaceleração \(\Rightarrow\) contração
+\end{itemize}
+\item Desaceleração econômica é relativamente mais rápida que a difusão da pandemia e anterior à implementação das primeiras políticas de isolamento social.
+\end{itemize}
+
+\begin{block}{Resumo}
+É a \alert{pandemia} que deprime a economia, e não as políticas de saúde pública capazes de controlá-la.
+
+Crise econômica \(\Leftrightarrow\) Pandemia
+
+Crise econômcia \(\nLeftrightarrow\) Isolamento social \(\Rightarrow \Downarrow\) Pandemia
+\end{block}
+\end{frame}
+
+\begin{frame}[label={sec:org5846345}]{Políticas econômicas}
+\begin{block}{Medidas de proteção da renda}
+\begin{itemize}
+\item Auxílio emergencial (R\$600,00 \(\approx\) US\$ 120,00)
+\item Liberação de liquidez no sistema financeiro internacional
+\item Atenuação de requerimento de capital
+\item Políticas de crédito para o setor empresarial
+\end{itemize}
+\end{block}
+\end{frame}
 \section{Dados 2011-2020}
-\label{sec:orgc9e42be}
+\label{sec:orgd4e65ae}
 
 
 
-\begin{frame}[label={sec:orgd5cd1f9}]{PIB puxado pelo mercado doméstico}
+\begin{frame}[label={sec:org0e0d5be}]{PIB puxado pelo mercado doméstico}
 \begin{figure}[htb]
 \centering
 \caption{Decomposição da taxa de crescimento do produto - Domésticos e externos} 
@@ -502,7 +628,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:orgbcc3226}]{Crescimento e o investimento induzido}
+\begin{frame}[label={sec:org73f98b4}]{Crescimento e o investimento induzido}
 \begin{figure}[htb]
 \centering
 \caption{Taxa de crescimento do produto - decomposição total} 
@@ -514,7 +640,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 
 
 
-\begin{frame}[label={sec:org9dd7f50}]{Emprego}
+\begin{frame}[label={sec:org5cc11ec}]{Emprego}
 \begin{figure}[htb]
 \centering
 \caption{Índice do Emprego Formal} 
@@ -528,7 +654,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 
 
 
-\begin{frame}[label={sec:org427b486}]{Taxa de câmbio nominal}
+\begin{frame}[label={sec:org19a79e9}]{Taxa de câmbio nominal}
 \begin{figure}[htb]
 \centering
 \caption{ Índice da taxa de câmbio efetiva nominal\\Jun/1994=100 } 
@@ -539,7 +665,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org14bdc52}]{Taxa de juros selic}
+\begin{frame}[label={sec:orge714c95}]{Taxa de juros selic}
 \begin{figure}[htb]
 \centering
 \caption{Taxa de juros selic a.a. (efetivo x meta)\\Anualizada base 252} 
@@ -550,7 +676,7 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \end{frame}
 
 
-\begin{frame}[label={sec:org4496bf5}]{Finalmente, inflação (ops, IPCA)}
+\begin{frame}[label={sec:orga611b61}]{Finalmente, inflação (ops, IPCA)}
 \begin{figure}[htb]
 \centering
 \caption{IPCA e Metas para Inflação} 
@@ -559,22 +685,37 @@ Investimento Adm, Pública & 14,0\% & -1,0\%\\
 \caption*{\textbf{Fonte:} BCB}
 \end{figure}
 \end{frame}
-\begin{frame}[label={sec:orgf3ef325}]{Preços livres, monitorados, serviços}
+\begin{frame}[label={sec:org756aede}]{Preços livres, monitorados, serviços}
 \begin{figure}[htb]
 \centering
 \caption{IPCA e seus componentes: preços livres, monitorados e serviços} 
-\includegraphics[width = 0.65\textwidth]{./figs/Livres_Administrados.png}
+\includegraphics[width = 0.95\textwidth]{./figs/Livres_Administrados.png}
 \label{fig:livres_adm}
 \caption*{\textbf{Fonte:} BCB}
 \end{figure}
 \end{frame}
 
+\begin{frame}[label={sec:orge7370c4}]{Consumo de energia não-residencial (dados diários)}
+\begin{figure}[htb]
+\centering
+\includegraphics[width = 0.95\textwidth]{./figs/Energia.png}
+\label{fig:cycles}
+\caption*{\textbf{Fonte:} \textcite{bastos_2020_impacto}}
+\end{figure}
+\end{frame}
 
-
+\begin{frame}[label={sec:org9789174}]{Indicadores de antecedentes: IBC-Br}
+\begin{figure}[htb]
+\centering
+\includegraphics[width = 0.95\textwidth]{./figs/IBCBr_corona.png}
+\label{fig:cycles}
+\caption*{\textbf{Fonte:} \textcite{bastos_2020_impacto}}
+\end{figure}
+\end{frame}
 \section{Referências}
-\label{sec:org70b9d7c}
+\label{sec:org2413a03}
 
-\begin{frame}[label={sec:orga50d8cd}]{Referências}
+\begin{frame}[label={sec:org89fadde}]{Referências}
 
 \printbibliography
 \end{frame}
