--- a/Materias/2S2020/PED_CE342/Turma_A/Turma_A.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/Turma_A.org
@@ -144,6 +144,7 @@ df = (
     .reset_index()
     .merge(ncm.reset_index(), how="left")
     .set_index("RA")
+    .join(importar_ext(Turma=Turma, data="2020-12-14"), how="left", on="Nome")
 )
 df["Email"] = [
     df["Nome"][i][0] + str(df.index[i]) + "@dac.unicamp.br"
@@ -1153,63 +1154,63 @@ print('\end{landscape}\end{center}')
 \small
 \setlength\LTleft{0pt}
 \setlength\LTright{0pt}
-\begin{longtable}{llrrrrrrrrrrl}
+\begin{longtable}{llrrrrrrrrrrrl}
 \caption{Lista de presença e de notas}\label{lista}\\
 \toprule
-{} &                                  Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &  2020-11-16 &  2020-11-23 &  Resenha Novos Keynesianos &  2020-11-30 &  Resenha Regime de Metas &                   Email \\
-\textbf{RA    } &                                       &                       &             &             &             &                          &             &             &                            &             &                          &                         \\
+{} &                                  Nome &  Resenha Monetaristas &  2020-10-19 &  2020-10-26 &  2020-11-09 &  Resenha Novos Clássicos &  2020-11-16 &  2020-11-23 &  Resenha Novos Keynesianos &  2020-11-30 &  Resenha Regime de Metas &  2020-12-14 &                   Email \\
+\textbf{RA    } &                                       &                       &             &             &             &                          &             &             &                            &             &                          &             &                         \\
 \midrule
 \endhead
 \midrule
-\multicolumn{13}{r}{{Continued on next page}} \\
+\multicolumn{14}{r}{{Continued on next page}} \\
 \midrule
 \endfoot
 
 \bottomrule
 \endlastfoot
-\textbf{212883} &                    ana pasti villalba &                  50.0 &           - &           - &       11.30 &                      5.0 &       36.96 &       16.39 &                        5.0 &        0.00 &                      0.0 &  a212883@dac.unicamp.br \\
-\textbf{212900} &                     ana paula martins &                  50.0 &        0.00 &        0.00 &       14.78 &                     10.0 &       64.49 &       81.97 &                        7.0 &       77.48 &                      5.0 &  a212900@dac.unicamp.br \\
-\textbf{231302} &              andré apolinário cardoso &                  70.0 &        0.00 &        0.00 &       94.78 &                      5.0 &        8.70 &       52.46 &                        0.0 &       61.26 &                      7.0 &  a231302@dac.unicamp.br \\
-\textbf{231732} &             artur preciozo figliolino &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &           - &           - &                          - &           - &                        - &  a231732@dac.unicamp.br \\
-\textbf{213360} &                    augusto lima alves &                  70.0 &       54.03 &        0.00 &        0.00 &                     10.0 &       84.06 &       48.36 &                        0.0 &       43.24 &                     10.0 &  a213360@dac.unicamp.br \\
-\textbf{231898} &         beatriz consolmagno de marchi &                  70.0 &        1.61 &        0.00 &       13.04 &                      5.0 &       10.14 &       54.92 &                        7.0 &        0.90 &                      0.0 &  b231898@dac.unicamp.br \\
-\textbf{213731} &                     bianca senne roma &                  70.0 &       29.03 &       62.64 &       31.30 &                     10.0 &        1.45 &       88.52 &                        7.0 &       68.47 &                      7.0 &  b213731@dac.unicamp.br \\
-\textbf{232395} &                   bruno bueno de lima &                  30.0 &        0.00 &        0.00 &       12.17 &                      7.0 &           - &        3.28 &                        7.0 &       14.41 &                      5.0 &  b232395@dac.unicamp.br \\
-\textbf{232796} &          carlos henrique araujo viana &                  70.0 &        4.84 &       14.29 &       18.26 &                      5.0 &        2.90 &       82.79 &                        7.0 &       10.81 &                      5.0 &  c232796@dac.unicamp.br \\
-\textbf{233335} &                 danielle araujo sousa &                  50.0 &        1.61 &        0.00 &       12.17 &                      5.0 &        3.62 &       18.03 &                        5.0 &        0.90 &                      5.0 &  d233335@dac.unicamp.br \\
-\textbf{233747} &          eduardo ranieri guedes pinto &                  70.0 &       49.19 &       19.78 &       95.65 &                     10.0 &       22.46 &        5.74 &                        7.0 &       85.59 &                      7.0 &  e233747@dac.unicamp.br \\
-\textbf{255207} &                  fernanda lima santos &                  50.0 &           - &           - &           - &                      0.0 &           - &           - &                        0.0 &           - &                      5.0 &  f255207@dac.unicamp.br \\
-\textbf{216459} &            gabriel santana rosmaninho &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &           - &           - &                          - &           - &                        - &  g216459@dac.unicamp.br \\
-\textbf{235951} &                guilherme garcia gobbo &                  30.0 &        2.42 &        0.00 &        0.00 &                        - &           - &           - &                          - &           - &                        - &  g235951@dac.unicamp.br \\
-\textbf{236276} &               gustavo henrique biondi &                   0.0 &        0.00 &        1.10 &        0.00 &                        - &           - &           - &                          - &           - &                        - &  g236276@dac.unicamp.br \\
-\textbf{218090} &            isabela de oliveira garcia &                  70.0 &        1.61 &        0.00 &       93.04 &                     10.0 &       78.99 &       13.11 &                       10.0 &       68.47 &                     10.0 &  i218090@dac.unicamp.br \\
-\textbf{255241} &             isabella rodrigues soares &                  50.0 &        0.81 &        0.00 &       87.83 &                      7.0 &       68.84 &       59.02 &                        3.0 &       45.95 &                      5.0 &  i255241@dac.unicamp.br \\
-\textbf{237618} &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &        2.61 &                     10.0 &        2.90 &       58.20 &                       10.0 &       89.19 &                     10.0 &  j237618@dac.unicamp.br \\
-\textbf{199735} &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &       89.57 &                      0.0 &       79.71 &        1.64 &                        5.0 &       88.29 &                      0.0 &  j199735@dac.unicamp.br \\
-\textbf{218975} &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &       96.52 &                      5.0 &       69.57 &       86.89 &                        0.0 &       85.59 &                      7.0 &  j218975@dac.unicamp.br \\
-\textbf{238414} &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &       19.13 &                      5.0 &       78.26 &        8.20 &                        7.0 &        3.60 &                     10.0 &  j238414@dac.unicamp.br \\
-\textbf{219613} &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &       15.65 &                      5.0 &           - &           - &                        5.0 &           - &                      0.0 &  k219613@dac.unicamp.br \\
-\textbf{219907} &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &       40.87 &                      7.0 &           - &           - &                       10.0 &           - &                      0.0 &  l219907@dac.unicamp.br \\
-\textbf{239052} &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &       81.74 &                      7.0 &       84.06 &       65.57 &                        7.0 &        4.50 &                      0.0 &  l239052@dac.unicamp.br \\
-\textbf{220194} &             leonardo tredici de souza &                  70.0 &        0.81 &        1.10 &       54.78 &                      5.0 &       39.13 &        0.00 &                        0.0 &        0.00 &                      0.0 &  l220194@dac.unicamp.br \\
-\textbf{201326} &               leonardo vitor da silva &                  50.0 &       75.81 &        0.00 &        6.09 &                     10.0 &       84.78 &        4.10 &                       10.0 &       91.89 &                     10.0 &  l201326@dac.unicamp.br \\
-\textbf{156242} &                 leticia da silva cruz &                   0.0 &           - &           - &       56.52 &                      5.0 &           - &       38.52 &                        7.0 &        3.60 &                     10.0 &  l156242@dac.unicamp.br \\
-\textbf{240317} &                       luis felipe avi &                  30.0 &           - &       30.77 &        7.83 &                      5.0 &        0.72 &        9.84 &                        0.0 &        8.11 &                        - &  l240317@dac.unicamp.br \\
-\textbf{240409} &                luísa mendes amstalden &                  70.0 &        5.65 &        0.00 &        8.70 &                      7.0 &        3.62 &        4.10 &                        7.0 &        0.00 &                      0.0 &  l240409@dac.unicamp.br \\
-\textbf{221515} &        marcos baldez lagoeiro barroso &                  50.0 &        0.81 &        1.10 &       42.61 &                      5.0 &       13.04 &        9.02 &                        0.0 &       81.98 &                      7.0 &  m221515@dac.unicamp.br \\
-\textbf{255293} &         maria júlia faustino da silva &                  30.0 &           - &           - &        0.00 &                      0.0 &           - &           - &                        0.0 &           - &                      0.0 &  m255293@dac.unicamp.br \\
-\textbf{241430} &              marina de marco santucci &                  50.0 &        0.00 &       74.73 &       27.83 &                      5.0 &           - &           - &                        5.0 &       61.26 &                      0.0 &  m241430@dac.unicamp.br \\
-\textbf{222315} &                 matheus oliveira lima &                  50.0 &        0.81 &        0.00 &        7.83 &                     10.0 &        1.45 &       43.44 &                        0.0 &        2.70 &                      7.0 &  m222315@dac.unicamp.br \\
-\textbf{184528} &       maycon jefferson teodoro bosing &                  50.0 &        0.00 &       71.43 &        0.00 &                      0.0 &           - &           - &                        0.0 &           - &                      5.0 &  m184528@dac.unicamp.br \\
-\textbf{222615} &     moises aparecido dos santos filho &                  70.0 &        0.00 &        0.00 &       89.57 &                      3.0 &       31.88 &        0.00 &                        7.0 &       82.88 &                     10.0 &  m222615@dac.unicamp.br \\
-\textbf{186966} &     samuel henrique rezende bernardes &                   0.0 &           - &           - &           - &                      0.0 &           - &           - &                        0.0 &           - &                      0.0 &  s186966@dac.unicamp.br \\
-\textbf{244321} &         sofia helena de oliveira nery &                  50.0 &        3.23 &        0.00 &       92.17 &                      5.0 &       19.57 &       52.46 &                        0.0 &        7.21 &                      5.0 &  s244321@dac.unicamp.br \\
-\textbf{244379} &                stefanno felipe bicudo &                  50.0 &        1.61 &        0.00 &       79.13 &                      5.0 &       66.67 &       54.10 &                        0.0 &       90.99 &                      7.0 &  s244379@dac.unicamp.br \\
-\textbf{187323} &              tatiana marchiori keller &                 100.0 &        0.00 &        0.00 &        7.83 &                      7.0 &           - &        0.82 &                        0.0 &        0.00 &                     10.0 &  t187323@dac.unicamp.br \\
-\textbf{206194} &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &       93.91 &                      5.0 &       54.35 &        0.00 &                        3.0 &       92.79 &                      0.0 &  t206194@dac.unicamp.br \\
-\textbf{245212} &          victoria silva torres santos &                 100.0 &           - &           - &           - &                     10.0 &           - &           - &                        0.0 &           - &                     10.0 &  v245212@dac.unicamp.br \\
-\textbf{206883} &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &       99.13 &                      3.0 &       23.91 &        0.82 &                        7.0 &       35.14 &                      7.0 &  v206883@dac.unicamp.br \\
-\textbf{245459} &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &       13.91 &                      0.0 &       69.57 &       57.38 &                        0.0 &        0.00 &                      7.0 &  v245459@dac.unicamp.br \\
+\textbf{212883} &                    ana pasti villalba &                  50.0 &           - &           - &       11.30 &                      5.0 &       36.96 &       16.39 &                        5.0 &        0.00 &                      0.0 &        0.00 &  a212883@dac.unicamp.br \\
+\textbf{212900} &                     ana paula martins &                  50.0 &        0.00 &        0.00 &       14.78 &                     10.0 &       64.49 &       81.97 &                        7.0 &       77.48 &                      5.0 &        0.00 &  a212900@dac.unicamp.br \\
+\textbf{231302} &              andré apolinário cardoso &                  70.0 &        0.00 &        0.00 &       94.78 &                      5.0 &        8.70 &       52.46 &                        0.0 &       61.26 &                      7.0 &        0.00 &  a231302@dac.unicamp.br \\
+\textbf{231732} &             artur preciozo figliolino &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &           - &           - &                          - &           - &                        - &        0.00 &  a231732@dac.unicamp.br \\
+\textbf{213360} &                    augusto lima alves &                  70.0 &       54.03 &        0.00 &        0.00 &                     10.0 &       84.06 &       48.36 &                        0.0 &       43.24 &                     10.0 &       27.96 &  a213360@dac.unicamp.br \\
+\textbf{231898} &         beatriz consolmagno de marchi &                  70.0 &        1.61 &        0.00 &       13.04 &                      5.0 &       10.14 &       54.92 &                        7.0 &        0.90 &                      0.0 &        1.08 &  b231898@dac.unicamp.br \\
+\textbf{213731} &                     bianca senne roma &                  70.0 &       29.03 &       62.64 &       31.30 &                     10.0 &        1.45 &       88.52 &                        7.0 &       68.47 &                      7.0 &        1.08 &  b213731@dac.unicamp.br \\
+\textbf{232395} &                   bruno bueno de lima &                  30.0 &        0.00 &        0.00 &       12.17 &                      7.0 &           - &        3.28 &                        7.0 &       14.41 &                      5.0 &        0.00 &  b232395@dac.unicamp.br \\
+\textbf{232796} &          carlos henrique araujo viana &                  70.0 &        4.84 &       14.29 &       18.26 &                      5.0 &        2.90 &       82.79 &                        7.0 &       10.81 &                      5.0 &       70.97 &  c232796@dac.unicamp.br \\
+\textbf{233335} &                 danielle araujo sousa &                  50.0 &        1.61 &        0.00 &       12.17 &                      5.0 &        3.62 &       18.03 &                        5.0 &        0.90 &                      5.0 &        2.15 &  d233335@dac.unicamp.br \\
+\textbf{233747} &          eduardo ranieri guedes pinto &                  70.0 &       49.19 &       19.78 &       95.65 &                     10.0 &       22.46 &        5.74 &                        7.0 &       85.59 &                      7.0 &        0.00 &  e233747@dac.unicamp.br \\
+\textbf{255207} &                  fernanda lima santos &                  50.0 &           - &           - &           - &                      0.0 &           - &           - &                        0.0 &           - &                      5.0 &           - &  f255207@dac.unicamp.br \\
+\textbf{216459} &            gabriel santana rosmaninho &                   0.0 &        0.00 &        0.00 &        0.00 &                        - &           - &           - &                          - &           - &                        - &        0.00 &  g216459@dac.unicamp.br \\
+\textbf{235951} &                guilherme garcia gobbo &                  30.0 &        2.42 &        0.00 &        0.00 &                        - &           - &           - &                          - &           - &                        - &        0.00 &  g235951@dac.unicamp.br \\
+\textbf{236276} &               gustavo henrique biondi &                   0.0 &        0.00 &        1.10 &        0.00 &                        - &           - &           - &                          - &           - &                        - &        0.00 &  g236276@dac.unicamp.br \\
+\textbf{218090} &            isabela de oliveira garcia &                  70.0 &        1.61 &        0.00 &       93.04 &                     10.0 &       78.99 &       13.11 &                       10.0 &       68.47 &                     10.0 &       18.28 &  i218090@dac.unicamp.br \\
+\textbf{255241} &             isabella rodrigues soares &                  50.0 &        0.81 &        0.00 &       87.83 &                      7.0 &       68.84 &       59.02 &                        3.0 &       45.95 &                      5.0 &        0.00 &  i255241@dac.unicamp.br \\
+\textbf{237618} &           joão pedro de paula e silva &                  70.0 &        2.42 &        0.00 &        2.61 &                     10.0 &        2.90 &       58.20 &                       10.0 &       89.19 &                     10.0 &        0.00 &  j237618@dac.unicamp.br \\
+\textbf{199735} &                    joao pedro gabriel &                  50.0 &       11.29 &        0.00 &       89.57 &                      0.0 &       79.71 &        1.64 &                        5.0 &       88.29 &                      0.0 &       36.56 &  j199735@dac.unicamp.br \\
+\textbf{218975} &                joão vitor santos melo &                  70.0 &       22.58 &        8.79 &       96.52 &                      5.0 &       69.57 &       86.89 &                        0.0 &       85.59 &                      7.0 &       17.20 &  j218975@dac.unicamp.br \\
+\textbf{238414} &     juliana florentina fernandes leão &                  70.0 &       16.94 &       40.66 &       19.13 &                      5.0 &       78.26 &        8.20 &                        7.0 &        3.60 &                     10.0 &        0.00 &  j238414@dac.unicamp.br \\
+\textbf{219613} &  keivan de castro almeida g. de souza &                  50.0 &        6.45 &        0.00 &       15.65 &                      5.0 &           - &           - &                        5.0 &           - &                      0.0 &        0.00 &  k219613@dac.unicamp.br \\
+\textbf{219907} &           laura maria alves de mattos &                 100.0 &        2.42 &        0.00 &       40.87 &                      7.0 &           - &           - &                       10.0 &           - &                      0.0 &        0.00 &  l219907@dac.unicamp.br \\
+\textbf{239052} &        lavínia dias de oliveira roman &                  70.0 &       11.29 &        0.00 &       81.74 &                      7.0 &       84.06 &       65.57 &                        7.0 &        4.50 &                      0.0 &        0.00 &  l239052@dac.unicamp.br \\
+\textbf{220194} &             leonardo tredici de souza &                  70.0 &        0.81 &        1.10 &       54.78 &                      5.0 &       39.13 &        0.00 &                        0.0 &        0.00 &                      0.0 &        0.00 &  l220194@dac.unicamp.br \\
+\textbf{201326} &               leonardo vitor da silva &                  50.0 &       75.81 &        0.00 &        6.09 &                     10.0 &       84.78 &        4.10 &                       10.0 &       91.89 &                     10.0 &        3.23 &  l201326@dac.unicamp.br \\
+\textbf{156242} &                 leticia da silva cruz &                   0.0 &           - &           - &       56.52 &                      5.0 &           - &       38.52 &                        7.0 &        3.60 &                     10.0 &        0.00 &  l156242@dac.unicamp.br \\
+\textbf{240317} &                       luis felipe avi &                  30.0 &           - &       30.77 &        7.83 &                      5.0 &        0.72 &        9.84 &                        0.0 &        8.11 &                        - &        0.00 &  l240317@dac.unicamp.br \\
+\textbf{240409} &                luísa mendes amstalden &                  70.0 &        5.65 &        0.00 &        8.70 &                      7.0 &        3.62 &        4.10 &                        7.0 &        0.00 &                      0.0 &        0.00 &  l240409@dac.unicamp.br \\
+\textbf{221515} &        marcos baldez lagoeiro barroso &                  50.0 &        0.81 &        1.10 &       42.61 &                      5.0 &       13.04 &        9.02 &                        0.0 &       81.98 &                      7.0 &       16.13 &  m221515@dac.unicamp.br \\
+\textbf{255293} &         maria júlia faustino da silva &                  30.0 &           - &           - &        0.00 &                      0.0 &           - &           - &                        0.0 &           - &                      0.0 &        0.00 &  m255293@dac.unicamp.br \\
+\textbf{241430} &              marina de marco santucci &                  50.0 &        0.00 &       74.73 &       27.83 &                      5.0 &           - &           - &                        5.0 &       61.26 &                      0.0 &        0.00 &  m241430@dac.unicamp.br \\
+\textbf{222315} &                 matheus oliveira lima &                  50.0 &        0.81 &        0.00 &        7.83 &                     10.0 &        1.45 &       43.44 &                        0.0 &        2.70 &                      7.0 &        0.00 &  m222315@dac.unicamp.br \\
+\textbf{184528} &       maycon jefferson teodoro bosing &                  50.0 &        0.00 &       71.43 &        0.00 &                      0.0 &           - &           - &                        0.0 &           - &                      5.0 &        0.00 &  m184528@dac.unicamp.br \\
+\textbf{222615} &     moises aparecido dos santos filho &                  70.0 &        0.00 &        0.00 &       89.57 &                      3.0 &       31.88 &        0.00 &                        7.0 &       82.88 &                     10.0 &        0.00 &  m222615@dac.unicamp.br \\
+\textbf{186966} &     samuel henrique rezende bernardes &                   0.0 &           - &           - &           - &                      0.0 &           - &           - &                        0.0 &           - &                      0.0 &           - &  s186966@dac.unicamp.br \\
+\textbf{244321} &         sofia helena de oliveira nery &                  50.0 &        3.23 &        0.00 &       92.17 &                      5.0 &       19.57 &       52.46 &                        0.0 &        7.21 &                      5.0 &        0.00 &  s244321@dac.unicamp.br \\
+\textbf{244379} &                stefanno felipe bicudo &                  50.0 &        1.61 &        0.00 &       79.13 &                      5.0 &       66.67 &       54.10 &                        0.0 &       90.99 &                      7.0 &        0.00 &  s244379@dac.unicamp.br \\
+\textbf{187323} &              tatiana marchiori keller &                 100.0 &        0.00 &        0.00 &        7.83 &                      7.0 &           - &        0.82 &                        0.0 &        0.00 &                     10.0 &       81.72 &  t187323@dac.unicamp.br \\
+\textbf{206194} &       thiago alexandre ramos dos reis &                  50.0 &       46.77 &        1.10 &       93.91 &                      5.0 &       54.35 &        0.00 &                        3.0 &       92.79 &                      0.0 &        0.00 &  t206194@dac.unicamp.br \\
+\textbf{245212} &          victoria silva torres santos &                 100.0 &           - &           - &           - &                     10.0 &           - &           - &                        0.0 &           - &                     10.0 &           - &  v245212@dac.unicamp.br \\
+\textbf{206883} &       vinicius santos bering da silva &                   0.0 &       16.94 &        0.00 &       99.13 &                      3.0 &       23.91 &        0.82 &                        7.0 &       35.14 &                      7.0 &        0.00 &  v206883@dac.unicamp.br \\
+\textbf{245459} &                     vinicius venancio &                  70.0 &        4.84 &        1.10 &       13.91 &                      0.0 &       69.57 &       57.38 &                        0.0 &        0.00 &                      7.0 &       10.75 &  v245459@dac.unicamp.br \\
 \end{longtable}
 \end{landscape}\end{center}
 #+end_export
